--- a/package.json
+++ b/package.json
@@ -2,9 +2,20 @@
   "name": "warframetoolchatbot",
   "version": "0.0.1",
   "description": "A chat bot for twitch that provides useful commands to query Warframe information",
-  "main": "src/bot.js",
+  "main": "dist/bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf dist/ && babel src/ --out-dir dist/ --copy-files",
+    "start": "nodemon dist/bot.js "
+  },
+  "nodemonConfig": {
+    "events": {
+      "restart": "npm run build"
+    },
+    "watch": [
+      "src/",
+      "dist/"
+    ]
   },
   "repository": {
     "type": "git",
@@ -22,5 +33,15 @@
   "bugs": {
     "url": "https://github.com/iBelg/warframetoolchatbot/issues"
   },
-  "homepage": "https://github.com/iBelg/warframetoolchatbot#readme"
+  "homepage": "https://github.com/iBelg/warframetoolchatbot#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "dotenv": "^5.0.1",
+    "rimraf": "^2.6.2"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "winston": "^3.0.0-rc5"
+  }
 }
