--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist/ && babel src/ --out-dir dist/ --copy-files",
-    "start": "nodemon dist/bot.js "
+    "start": "node dist/bot.js "
   },
   "nodemonConfig": {
     "events": {
@@ -36,12 +36,16 @@
   "homepage": "https://github.com/iBelg/warframetoolchatbot#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-js-logger": "^1.0.17",
     "babel-preset-es2015": "^6.24.1",
     "dotenv": "^5.0.1",
     "rimraf": "^2.6.2"
   },
   "dependencies": {
     "express": "^4.16.3",
-    "winston": "^3.0.0-rc5"
+    "immutable": "^3.8.2",
+    "js-logger": "^1.4.1",
+    "lodash": "^4.17.10",
+    "ws": "^5.1.1"
   }
 }
